--- a/_posts/2021-01-20-Assignment1/Assignment1.html
+++ b/_posts/2021-01-20-Assignment1/Assignment1.html
@@ -1520,7 +1520,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <img src="Figure4.png" style="width:70.0%" alt="Figure4 : Sketch4" /><figcaption aria-hidden="true">Figure4 : Sketch4</figcaption>
 </figure>
 <h3 id="final-dashboard-of-visualisation-using-tableau.">3.2. Final dashboard of visualisation using Tableau.</h3>
-<p>All the charts we designed above were rearranged for one cleaned dashboard <img src="Figure5_final_dashboard2.png" alt="Figure5 : Final Dashboard" /></p>
+<p>All the charts we designed above were rearranged for one cleaned dashboard <img src="Figure5_final_dashboard2.png" alt="Figure5 : Final Dashboard" /> <a href="https://public.tableau.com/views/Assignment1_final_16118197609310/Dashboard_final?:language=en&amp;:display_count=y&amp;publish=yes&amp;:origin=viz_share_link" title="lick to link">Figure5 : Final Dashboard</a></p>
 <h2 id="step-by-step-preparation-of-visualization">4. Step-by-step preparation of visualization</h2>
 <h3 id="preparation-for-data-sets">4.1. Preparation for data sets</h3>
 <table>
